🎨 Add Creators app icons to Chrome extension
✨ Updates:
- Copied official app icons (16px, 48px, 128px) from desktop app
- Updated extension name: 'Creators Video Automation'
- Improved popup branding to match desktop app
- Added high-res app logo for future use

🔧 Icons copied from:
- logo.iconset/icon_16x16.png → icon16.png
- logo.iconset/icon_32x32@2x.png → icon48.png
- logo.iconset/icon_128x128.png → icon128.png

Now extension has consistent visual identity with desktop app! 🎯

--- a/chrome-extension-creators/manifest.json
+++ b/chrome-extension-creators/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Paste to Creators",
+  "name": "Creators Video Automation",
   "version": "1.0",
-  "description": "Right-click YouTube videos to send directly to Creators Video Automation app",
+  "description": "Right-click YouTube videos to send directly to Creators Video Automation desktop app",
   
   "permissions": [
     "contextMenus",
@@ -39,6 +39,6 @@
   
   "action": {
     "default_popup": "popup.html",
-    "default_title": "Paste to Creators"
+    "default_title": "Creators Video Automation"
   }
 }
