--- a/chrome-extension-creators/manifest.json
+++ b/chrome-extension-creators/manifest.json
@@ -7,7 +7,8 @@
   "permissions": [
     "contextMenus",
     "activeTab",
-    "storage"
+    "storage",
+    "notifications"
   ],
   
   "host_permissions": [
