🔧 Debug Chrome extension: Create simplified background script
- Created background_simple.js with extensive logging
- Simplified context menu creation with error handling
- Updated manifest to use debug version
- Added console logs at every step for debugging

This will help identify exactly where the extension is failing.

--- a/chrome-extension-creators/manifest.json
+++ b/chrome-extension-creators/manifest.json
@@ -18,7 +18,7 @@
   ],
   
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background_simple.js"
   },
   
   "content_scripts": [
